@@ -1,6 +1,8 @@
 xxxx-xx-xx: 2.02 CVS
 	Std.is(MyInterface, Class) now returns true (haXe/PHP)
 	php arrays are wrapped into _hx_array instances, fixes issues with references (array cast, access out of bounds ...)
+	removed untested php classes (php.DBase, php.IniHash)
+	added -D use_rtti_doc
 
 2008-10-04: 2.01
 	fixed php.Sys
